# pilot-bench

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  CTestCustom.cmake  LICENSE  README.md  pilot-tool.doxyfile
ansible/: bootstrap-pilot-builder.yaml
ansible/roles/ansible-boost/defaults/: main.yml
ansible/roles/ansible-boost/meta/: main.yml
ansible/roles/ansible-boost/tasks/: main.yml
build-env/ansible-roles/ansible-boost/: README.md
build-env/ansible-roles/ansible-boost/defaults/: main.yml
build-env/ansible-roles/ansible-boost/tasks/: main.yml
build-env/centos7/: Vagrantfile  Vagrantfile.public  bootstrap-pilot-builder.yaml  zerofree.sh
build-env/centos7-x64/: Vagrantfile  bootstrap-pilot-builder.yaml  zerofree.sh
cli/: CMakeLists.txt  analyze.cc  benchmark_worker.cc  benchmark_worker.h  detect_changepoint_edm.cc  pilot-cli.h  pilot.cc  run_program.cc
cli/test/: mock_benchmark.sh  mock_benchmark_binomial_proportion.sh  mock_benchmark_long_lines.sh  mock_benchmark_with_changepoint.sh  mock_benchmark_with_work_amount.sh  unit_test_analyze.sh  unit_test_analyze_input.csv  unit_test_analyze_input_2col.csv  unit_test_analyze_input_3col.csv  unit_test_analyze_input_3col_with_header.csv  unit_test_analyze_input_3col_with_malformed_header.csv  unit_test_benchmark.sh  unit_test_benchmark_binomial_proportion.sh  unit_test_benchmark_long_lines.sh  unit_test_benchmark_with_changepoint.sh  unit_test_cli.cc  unit_test_lua_prompt.sh  unit_test_pilot_opt_parsing.sh
cmake/: configure_fpic.sh
cmake/modules/: FindReadline.cmake
doc/: .gitignore  CMakeLists.txt  Makefile  build.rst  conf.py  config.template  entity-relationship-diagram.dot  features.rst  global-ref.rst  index.rst  install-linux.rst  install-mac.rst  install.rst  make.bat  make.sh  references.txt  requirements.txt  signing-keys.rst  supported-os.rst  tutorial-list.rst  warning-of-unstable.rst  what-is-pilot.rst
doc/_static/: mathconf.js
doc/_templates/: layout.html
doc/features/: autocorrelation-detection-and-mitigation.rst  comparing-results.rst  deciding-optimal-session-length.rst  statistics-101.rst  terms.rst  warm-up-and-cool-down-phase-detection.rst
doc/tutorials/: Measuring-the-duration-of-running-CPP-functions.md  Measuring-the-duration-of-running-CPP-functions.rst  Using-Pilot-to-run-a-command-line-benchmark-job.md  Using-Pilot-to-run-a-command-line-benchmark-job.rst
examples/: .gitignore  README.md  benchmark_hash.cc  make.sh  test_hash_func.cc
examples/benchmark_dd/: run_dd.sh
examples/benchmark_dd/dd_output_samples/: 1.txt
examples/benchmark_dd_no_wps/: run_dd_extract_tp.sh
include/: common.h  config.h.in
lib/: CMakeLists.txt  libpilot.cc  python_binding.cc  twitter_breakoutdetection_pilot.patch  workload.cc
lib/interface_include/: libpilot.h  pilot_exports.h  pilot_tui.hpp  pilot_workload_runner.hpp
lib/interface_include/pilot/: libpilot.h  pilot_exports.h  pilot_tui.hpp  pilot_workload_runner.hpp
lib/priv_include/: csv.h  libpilotcpp.h  workload.h  workload.hpp
lib/test/: calc_wps_and_naive_v_err.py  eval_wps_vs_naive_mean.py  func_test_seq_write.cc  plot_seq_write_throughput.py  run_test_seq_write.sh  unit_test_compare_results.cc  unit_test_compare_results_input.csv  unit_test_macros.cc  unit_test_misc.cc  unit_test_python_statistics.py  unit_test_readings_warmup_removal.cc  unit_test_run_workload.cc  unit_test_run_workload_export_expected.csv  unit_test_session_duration.cc  unit_test_statistics.cc  unit_test_statistics_test_data.xlsx  unit_test_statistics_test_data_speed_of_light.ods  unit_test_statistics_test_data_speed_of_light.xls  unit_test_unit_readings_iter.cc  unit_test_wps.cc
packaging/: rpm_changelog.txt
vagrant/: .gitignore  Vagrantfile
